--- a/Sketcher/.vscode/settings.json
+++ b/Sketcher/.vscode/settings.json
@@ -75,6 +75,7 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "xtree": "cpp"
     }
 }
