--- a/Sketcher/.vscode/settings.json
+++ b/Sketcher/.vscode/settings.json
@@ -76,6 +76,7 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "forward_list": "cpp"
     }
 }
