--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 ./Sketcher/.vs/
 ./Sketcher/assets/Mustang 13.04.2021 Compressed.obj
 
-/Sketcher/data
-/Sketcher/out
-/Sketcher/build
-/Sketcher/.vscode
-/Sketcher/.qt
-/Sketcher/.vs
+./Sketcher/data
+./Sketcher/out
+./Sketcher/build
+./Sketcher/.vscode
+./Sketcher/.qt
+./Sketcher/.vs
