--- a/Sketcher/.vscode/settings.json
+++ b/Sketcher/.vscode/settings.json
@@ -78,5 +78,6 @@
         "xutility": "cpp",
         "xtree": "cpp",
         "forward_list": "cpp"
-    }
+    },
+    "sonarlint.pathToCompileCommands": "${workspaceFolder}\\SketcherGUI\\build\\Desktop_Qt_6_9_0_MinGW_64_bit-Debug\\.qtc_clangd\\compile_commands.json"
 }
